# bmd-cc

./: README.md
sql/: brightmd.db
src/: pyproject.toml  schema.sql
src/api/: api.py  processor.py  test_api.py
